--- a/Views/DangKyXetTuyenThang/Index.cshtml
+++ b/Views/DangKyXetTuyenThang/Index.cshtml
@@ -780,7 +780,7 @@
             flag = false;
         }
         if (!Dkxt_CapDoGiai) {
-            var errorMessage = "Vui lòng nhập cấp độ giải";
+            var errorMessage = "Vui lòng nhập tên kỳ thi";
             $('#Dkxt_CapDoGiai_Error').text(errorMessage);
             flag = false;
         }
