--- a/Views/Auth/ResetPassword.cshtml
+++ b/Views/Auth/ResetPassword.cshtml
@@ -1,78 +1,71 @@
-﻿@model HDU_AppXetTuyen.Models.ThiSinhDangKy
-
-@{
-    ViewBag.Title = "Đặt lại mật khẩu";
-    Layout = "~/Views/Shared/_Layout_auth.cshtml";
+﻿@{
+    ViewBag.Title = "Login";
+    Layout = null;
 }
-<div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
-        <main>
-            <div class="container-xl px-4">
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="card shadow-lg border-0 rounded-lg mt-5">
-                            <div class="card-header justify-content-center">
-                                <img src="~/Content/images/logo-hdu.png" style="width: 100%;" />
-                            </div>
-                            <div class="card-body">
-                                @{
-                                    if (ViewBag.ResetPasswordError != null)
-                                    {
-                                        <label class="small mb-1 text-danger" name="error_login" id="error_login">@ViewBag.ResetPasswordError</label>
-                                    }
-                                }
-                                @using (Html.BeginForm("ResetPassword", "Auth", FormMethod.Post, new { id = "resetForm" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                    <div class="mb-3">
-                                        <label class="small mb-1" for="ThiSinh_CCCD">CMND/CCCD</label>
-                                        @Html.EditorFor(model => model.ThiSinh_CCCD, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập căn cước công dân" } })
-                                        @Html.ValidationMessageFor(model => model.ThiSinh_CCCD, "", new { @class = "small mb-1 text-danger" })
-                                    </div>
-                                    <div class="mb-3" style="margin-top:5px">
-                                        <label class="small mb-1" for="ThiSinh_Email">Mã xác nhận</label>
-                                        <input type="text" name="authCode" id="authCode" class="form-control" placeholder="Nhập mã xác nhận" />
-                                        <label id="additionalDataError" class="small mb-1 text-danger" style="display: none;"></label>
-                                    </div>
-                                    <div class="mb-3" style="margin-top:5px">
-                                        <label class="small mb-1" for="ThiSinh_MatKhau">Mật khẩu mới</label>
-                                        @Html.EditorFor(model => model.ThiSinh_MatKhau, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập mật khẩu mới" } })
-                                        @Html.ValidationMessageFor(model => model.ThiSinh_MatKhau, "", new { @class = "small mb-1 text-danger" })
-                                    </div>
-                                    <div class="d-flex align-items-center justify-content-center mt-4 mb-0">
-                                        <input class="btn btn-primary" type="submit" value="Tiếp tục" />
-                                    </div>
-                                }
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đăng nhập hệ thống</title>
+    <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/StylesAdminLogin.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div class="login-container">
+        <form class="login-form" method="post">
+            <div class="text-center text-uppercase"><h5 class="colorlogin" style="font-weight: bold">ĐẶT LẠI MẬT KHẨU</h5></div>
+            <hr />
+
+            <input type="text" placeholder="Nhập tên đăng nhập đã đăng ký" name="student_Username" id="student_Username" class="form-control col-12">
+            <span id="student_Username_Error" class="small mb-1 text-danger col-12"></span>
+
+            <input type="text" placeholder="Nhập mã xác nhận đặt lại mật khẩu" name="verification_Codes" id="verification_Codes" class="form-control col-12">
+            <span id="verification_Codes_Error" class="small mb-1 text-danger col-12"></span>
+
+            <input name="student_Pass" id="student_Pass" class="form-control col-12" type="password" placeholder="Mật khẩu mới" required >
+            <span id="student_Pass_Error" class="small mb-1 text-danger col-12"></span>  
+       
+            <a class="btn login-button col-12 mt-2" id="bt_reset_pass_ok" name="bt_reset_pass_ok">Đồng ý</a>
+
+            <span id="Login_Error" class="small mb-1 text-danger col-12"></span>
+            <hr />
+            <div class="register-link">
+                Quay lại trang <a href="/Auth/Login">Đăng nhập</a>
             </div>
-        </main>
+        </form>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="~/Scripts/scripts.js"></script>
-@Scripts.Render("~/bundles/jqueryval")
-<script>
-    $(document).ready(function () {
-        $("#resetForm").submit(function (e) {
-            e.preventDefault();
 
-            // Perform validation
-            var additionalData = $("#authCode").val();
-            if (!additionalData) {
-                $('#additionalDataError').text('Vui lòng nhập mã xác nhận');
-                $('#additionalDataError').show();
-            } else {
-                this.submit();
-            }
 
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/modernizr-2.8.3.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#resetForm").submit(function (e) {
+                e.preventDefault();
+
+                // Perform validation
+                var additionalData = $("#authCode").val();
+                if (!additionalData) {
+                    $('#additionalDataError').text('Vui lòng nhập mã xác nhận');
+                    $('#additionalDataError').show();
+                } else {
+                    this.submit();
+                }
+            });
+
+            $('#authCode').on('input', function () {
+                $('#additionalDataError').hide();
+            });
         });
+    </script>
 
-        $('#authCode').on('input', function () {
-            $('#additionalDataError').hide();
-        });
-    });
-</script>
+</body>
+</html>
+
