--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -45,8 +45,8 @@
         $('#showSignupColleger').click(function () {
             $('#bt_cancel_modal_tb_second').hide();
             $('#bt_ok_modal_tb').text('Đóng');
-            $('#span_noidung_thongbao').text('Đã hết thời gian, hệ thống tạm dừng đăng ký dự tuyển đại học');
-            $('#modal_tb').modal('show');
+            //$('#span_noidung_thongbao').text('Đã hết thời gian, hệ thống tạm dừng đăng ký dự tuyển đại học');
+            //$('#modal_tb').modal('show');
             window.location.href = '/Auth/RegisterColleger/';
         })
        
@@ -63,8 +63,8 @@
         $('#showSignupLienCap').click(function () {
             $('#bt_cancel_modal_tb_second').hide();
             $('#bt_ok_modal_tb').text('Đóng');
-            $('#span_noidung_thongbao').text('Đã hết thời gian, trường liên cấp tạm dừng đăng ký dự tuyển');
-            $('#modal_tb').modal('show');
+            //$('#span_noidung_thongbao').text('Đã hết thời gian, trường liên cấp tạm dừng đăng ký dự tuyển');
+            //$('#modal_tb').modal('show');
             window.location.href = '/LienCapTHCS/index/';
         })
     })
