--- a/Views/Auth/ForgotPassword.cshtml
+++ b/Views/Auth/ForgotPassword.cshtml
@@ -51,22 +51,22 @@
             <div class="row g-1 mb-2 mt-2">
                 <div class="col-lg-4 col-md-12">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" value="1" checked>
+                        <input class="form-check-input" type="radio" id="RdDaiHocSendEmail" name="radioSendEmail" value="1" checked>
                         <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-12">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="2">
+                        <input class="form-check-input" type="radio" id="RdSauDaiHocSendEmail" name="radioSendEmail" value="2">
                         <label class="form-check-label" for="radioSauDaiHoc">Hệ sau đại học</label>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-12">
+                @*<div class="col-lg-3 col-md-12">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" id="radioLienCap" name="radioHeDaoTao" value="3">
                         <label class="form-check-label" for="radioLienCap">Liên cấp</label>
                     </div>
-                </div>
+                </div>*@
             </div>
 
             <span id="RadioHeDaoTao_Error" class="small mb-1 text-danger col-12"></span>
@@ -103,7 +103,27 @@
 
             <input name="ThiSinh_MatKhau" id="ThiSinh_MatKhau" class="form-control col-12" type="password" placeholder="Nhập mật khẩu mới" required>
             <span id="ThiSinh_MatKhau_Error" class="small mb-1 text-danger col-12"></span>
-
+            
+            <div class="row g-1 mb-2 mt-2">
+                <div class="col-lg-4 col-md-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" id="RdDaiHocChangePass" name="radioChangePass" value="1" checked>
+                        <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" id="RdSauDaiHocChangePass" name="radioChangePass" value="2">
+                        <label class="form-check-label" for="radioSauDaiHoc">Hệ sau đại học</label>
+                    </div>
+                </div>
+                @*<div class="col-lg-3 col-md-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" id="radioLienCap" name="radioHeDaoTao" value="3">
+                        <label class="form-check-label" for="radioLienCap">Liên cấp</label>
+                    </div>
+                </div>*@
+            </div>
             <a class="btn login-button col-12 mt-2" id="bt_OK_Reset_Pass" name="bt_OK_Reset_Pass">Đồng ý</a>
 
             <span id="Login_Error" class="small mb-1 text-danger col-12"></span>
@@ -178,14 +198,24 @@
                 flag_change = false;
             }
 
+            var thiSinh_GhiChu_ChangePass = ""            
+            
+            if ($('#RdDaiHocChangePass').is(':checked')) { thiSinh_GhiChu_ChangePass = 3 };
+            if ($('#RdSauDaiHocChangePass').is(':checked')) { thiSinh_GhiChu_ChangePass = 4 };
+
             if (!flag_change) return;
 
             var data_change_pass = {
                 ThiSinh_CCCD: $('#ThiSinh_CCCD').val().trim(),
                 ThiSinh_ResetCode: $('#ThiSinh_ResetCode').val().trim(),
                 ThiSinh_MatKhau: $('#ThiSinh_MatKhau').val().trim(),
-            }             
+                ThiSinh_GhiChu: thiSinh_GhiChu_ChangePass,
+            }
+
+            console.log('data_change_pass ', data_change_pass);
+          
             $("#loadingModal").modal("show");
+          /*  return*/
             $.ajax({
                 url: "/Auth/ResetPassword",
                 type: "POST",
@@ -197,7 +227,7 @@
                     let check_change = res.data;                  
                     if (res.success == true) {
                         //showToast("Thông báo", check_change.text_check, "bg-error");
-                        $('#span_text_view').text('Đổi mật khẩu thành công.Quay lại trang đăng nhập ....');                    
+                        $('#span_text_view').text('Đổi mật khẩu thành công. Quay lại trang đăng nhập ....');                    
                         setTimeout(function () {                         
                             window.location.href = '/Auth/Login';
                           /*  $('#loadingModal').modal('hide');*/
@@ -229,11 +259,21 @@
                 $('#ThiSinh_Email_Error').text('Vui lòng nhập email đã dùng để đăng ký!');
                 flag = false;
             }
-            if (!flag) return;
+            if (!flag) return;            
+            
+            var thiSinh_GhiChu_SendEmail = ""
+
+            if ($('#RdDaiHocSendEmail').is(':checked')) { thiSinh_GhiChu_SendEmail = 1 };
+            if ($('#RdSauDaiHocSendEmail').is(':checked')) { thiSinh_GhiChu_SendEmail = 2 };
 
             var data_send_email = {
                 ThiSinh_Email: $('#ThiSinh_Email').val(),
+                ThiSinh_GhiChu: thiSinh_GhiChu_SendEmail,
             }
+
+            console.log('data_send_email', data_send_email);
+          
+
             $('#span_text_view').text('Vui lòng chờ trong giây lát ....');   
             $("#loadingModal").modal("show");
             $.ajax({
